Fix layout on small viewport.

--- a/src/views/app.scss
+++ b/src/views/app.scss
@@ -28,6 +28,7 @@
 }
 
 body {
+  min-width: 1080px;
   overflow-x: auto;
   overflow-y: scroll;
   text-align: center;
